netcfg (0.31) unstable; urgency=low

  * Gaudenz Steinlin
    - remove useless and confusing dhcp
      confirm question
    - apply debconf templates polishing
      (Thanks to Christian Perrier and
       Chris Tillman) (Closes: #219633)

 -- Gaudenz Steinlin <steinlin@sowipc4.unibe.ch>  Thu, 13 Nov 2003 20:44:54 +0100

netcfg (0.30) unstable; urgency=low

  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Bart Cornelis
    - Udate Dutch translation (nl.po)
  * Steinar H. Gunderson
    - Fix so that netcfg asks debconf for the description for
      "netcfg/internal-eth" instead of (e.g.) "netcfg/internal-eth0".
    - Make multiple network cards work properly, by stripping off the
      trailing ", " from the choices list sent to cdebconf.
  * Alastair McKinstry
    - Enable <goback> button to work. Closes: #212771.
  * Claus Hindsgaul
    - Update da (Danish) translation.

 -- Joey Hess <joeyh@debian.org>  Mon, 10 Nov 2003 13:46:20 -0500

netcfg (0.29) unstable; urgency=low

  * Joey Hess
    - Temporary fix to refer to correct menu item title for ethdetect.
    - Add myself to uploaders.
  * Matt Kraai
    - Pass -e to dhclient so that it exits unsuccessfully if it is unable
      to obtain a lease (closes: #219392).
  * Philippe Batailler
     - Update French translation.
  * Christian Perrier
     - Fix Turkish PO file (closes: #219396).
  * André Luís Lopes
     - Update pt_BR (Brazilian Portuguese) translation.
  * Miroslav Kure
     - Update Czech translation.
  * Tommi Vainikainen
    - Update Finnish translation.

 -- Joey Hess <joeyh@debian.org>  Fri,  7 Nov 2003 13:19:11 -0500

netcfg (0.28) unstable; urgency=low

  * André Luís Lopes
    - Updated pt_BR (Brazilian Portuguese) translation.
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Bart Cornelis
    - Updated dutch translation (nl.po)
    - added lituanian (lt.po) translation from Kestutis Biliunas
  * Tommi Vainikainen
    - Add Finnish (fi.po) translation